--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="col-start-2 text-center">
     <div id="options"></div>
   </div>
-  <div class="col-start-2 text-center">
+  <div id="submitTag" class="col-start-2 text-center">
     <button id="startBtn"
             class="mx-auto shadow-none outline-none text-indigo-100 bg-indigo-500 text-white font-bold py-2 px-4 rounded-full">
       Start Quiz
