Set variables in local storage

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <div id="submitCont" class="col-start-2 text-center">
     <button id="startBtn"
-             class="bg-transparent hover:bg-indigo-800 text-indigo-700 font-semibold hover:text-white py-2 px-4 border border-indigo-500 hover:border-transparent rounded-full block mx-auto my-5">
+             class="focus:outline-none bg-transparent hover:bg-indigo-800 text-indigo-700 font-semibold hover:text-white py-2 px-4 border border-indigo-500 hover:border-transparent rounded-full block mx-auto my-5">
       Start Quiz
     </button>
   </div>
