Implement time left function

--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
     </div> <!-- col-start-3 -->
     <!-- Timer container -->
     <div
-      class="col-start-5 p-2 bg-indigo-800 items-center leading-none lg:rounded-full flex lg:inline-flex w-2/5 mx-auto"
+      class="col-start-5 p-2 bg-indigo-800 items-center leading-none lg:rounded-full flex lg:inline-flex w-1/2 mx-auto text-center"
       role="alert">
-      <span class="font-semibold text-indigo-100 mx-2 text-left">Time</span>
-      <span id="minutes" class="flex text-indigo-100 rounded-full bg-indigo-500 px-2 py-1 text-xs font-bold">3
-        <span>:</span>
-        <span id="seconds">00</span>
-      </span>
+      <span class="font-semibold text-indigo-100 mx-2 text-left">Time left</span>
+      <span id="seconds" class="flex text-indigo-100 rounded-full bg-indigo-500 px-2 py-1 ml-2 text-xs font-bold">60</span>
     </div>  <!-- Timer container ends -->
   </div> <!-- .grid -->
 </nav>
@@ -46,7 +43,7 @@
     </button>
   </div> <!-- .col-start-2 -->
 </section>
-<!-- Scriot links -->
+<!-- Script links -->
 <script src="script.js"></script>
 </body>
 </html>
