--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p id="title" class="text-indigo-500 text-3xl">Java Script Quiz</p>
   </div> <!-- .col-start-2 -->
   <div id="questionsCont" class="col-start-2 text-center"> <!-- Questions section  -->
-    <p id="qnTag" class="my-10">Try to answer the following code-related questions within the time. Keep in mind that
+    <p id="qnTag" class="mt-10 mb-5">Try to answer the following code-related questions within the time. Keep in mind that
       incorrect answers will penalize your score time by ten seconds.</p>
   </div> <!-- .col-start-2 -->
   <div class="col-start-2 text-center">
