--- a/index2.html
+++ b/index2.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 <nav class="row-span-1 bg-indigo-900 py-8">
-  <div class="grid grid-flow-col grid-cols-5">
-    <div class="col-start-3 text-center">
+  <div class="grid md:grid-cols-2 lg:grid-cols-5">
+    <div class="lg:col-start-3 text-center">
       <h1 class="text-2xl text-indigo-100">Coding Quiz Challenge</h1>
     </div> <!-- col-start-3 -->
     <!-- Timer container -->
     <div
-      class="col-start-5 p-2 bg-indigo-800 items-center leading-none lg:rounded-full flex lg:inline-flex w-1/2 mx-auto text-center"
+      class="lg:col-start-5 p-2 bg-indigo-800 items-center leading-none rounded-full flex lg:inline-flex lg:w-1/2 mx-auto text-center"
       role="alert">
       <span class="font-semibold text-indigo-100 mx-2 text-left">Time left</span>
       <span id="seconds"
@@ -23,20 +23,20 @@
     </div>  <!-- Timer container ends -->
   </div> <!-- .grid -->
 </nav>
-<section class="grid grid-flow-col grid-cols-3 mt-20">
-  <div class="col-start-2 text-center">
+<section class="grid grid-flow-col sm:grid-col-1 lg:grid-cols-3 mt-20">
+  <div class="col-start-2 lg:text-center ml-4">
     <p id="title" class="text-indigo-500 text-3xl">Java Script Quiz</p>
   </div> <!-- .col-start-2 -->
   <div id="questionsCont" class="col-start-2 text-center"> <!-- Questions section  -->
-    <p id="qnTag" class="mt-10 mb-5">Try to answer the following code-related questions within the time. Keep in mind that
+    <p id="qnTag" class="mt-10 mb-5 mx-3">Try to answer the following code-related questions within the time. Keep in mind that
       incorrect answers will penalize your score time by ten seconds.</p>
   </div> <!-- .col-start-2 -->
   <div class="col-start-2 text-center">
-    <div id="optionsCont"></div> <!-- Answers  section  -->
+    <div id="optionsCont" class="lg:p-5"></div> <!-- Answers  section  -->
   </div> <!-- .col-start-2 -->
-  <div class="col-start-2 text-center">
+  <div class="col-start-2 lg:text-center">
     <div id="highscoreCont"> </div> <!-- Highscore  section  -->
-    <div id="highscoreBtns"></div>
+    <div id="highscoreBtns" class="mt-4"></div>
   </div> <!-- .col-start-2 -->
   <div class="col-start-2 text-center">
     <div id="validationCont"></div><!-- Wrong or Correct answers section  -->
